# graphics-engine

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp
src/geometry/: Geometry.h
src/rendering/: Camera.cpp  Camera.h  Lighting.cpp  Lighting.h  Render.cpp  Render.h  Shader.cpp  Shader.h
src/window/: Window.cpp  Window.h
